# LIMstat

./: LICENSE  README.rst  SKA1Low_layout_Sept2016.txt  SKA_SDC3.yaml  Specs.ipynb  data_cube.ipynb  layout_files.tar  pyproject.toml  setup.cfg  setup.py
SKA-FG/: DiffuseForegrounds.ipynb  FG_pygsm.py  HERA_hack_FG.py  PS_tests.ipynb  PyGSM .ipynb  cosmo_signal.ipynb  example.ipynb  fft_speed_tests.ipynb  filtered_pspec.ipynb  make_universe_2D.py  make_universe_3D.py  make_universe_3D_old.py  noise_box.ipynb  pspec_2D.py  pspec_3D.py  requirements.txt  thermal_noise.py
data/layout_files/: layout.txt  layout_longlat.txt
gpr_work/: gp_utils.py
limstat/: __init__.py  instruments.py
ska_simulator/: setup.py
ska_simulator/ska_simulator/: __init__.py  cosmo_units.py  fast_interferometer.py  power_spectrum.py  simulations.py  window_function.py
ska_simulator/tests/: test_cosmological_signal.py  test_foregrounds.py  test_noise.py  test_power_spectrum.py
ska_simulator/tutorials/: tutorial_cosmo_signal.ipynb  tutorial_foregrounds.ipynb
src/limstat/: cosmo_units.py  simulations.py  utils.py  window_function.py
src/limstat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_cosmological_signal.py  test_foregrounds.py  test_noise.py  test_power_spectrum.py
tutorials/: Testing 3D Pspec + Window.ipynb  tutorial_cosmo_signal.ipynb  tutorial_foregrounds.ipynb
