[metadata]
name = limstat
description = A package to simulate LIM observations
author = Rebecca Ceppas de Castro, Hannah Fronenberg, Adelie Gorce, Adrian Liu, Lisa McBride, Bobby Pascua
license = BSD
version = 0.0.1
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/McGill-Cosmic-Dawn-Group/LIMstat/
platforms = OSX,Linux
classifiers = 
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Natural Language :: English
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Astronomy

[options]
zip_safe = False
package_dir=
    =src
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    setuptools>=61.0
    astropy
    numpy
    cached_property
    scipy
    healpy
    uvtools
    matplotlib
    deprecated

[options.packages.find]
exclude =
    tests
where = 
    src

[options.extras_require]
docs =
    sphinx==5.3.0
    sphinx_rtd_theme==1.1.1
    readthedocs-sphinx-search==0.1.1
    nbsphinx
    ipython
    sphinx_autorun
    numpydoc>=0.8
    nbsphinx
    mock==1.0.1
tests =
    pytest>=3.5.1
dev =
    limstat[doc,tests]
    limstat[tests]

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts =
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests/

[aliases]
dists = bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx